--- a/app/src/main/res/layout/activity_check_wallet_info.xml
+++ b/app/src/main/res/layout/activity_check_wallet_info.xml
@@ -133,8 +133,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/d20">
 
-            <TextView
-                android:id="@+id/tv_private_key"
+            <EditText
+                android:id="@+id/et_private_key"
+                style="@style/edit_text_style_no_focus"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/d32"
                 android:layout_centerVertical="true"
@@ -142,7 +143,6 @@
                 android:layout_marginTop="@dimen/d16"
                 android:background="@drawable/bg_edit_text"
                 android:drawablePadding="@dimen/d10"
-                android:enabled="false"
                 android:inputType="textPassword"
                 android:maxLength="52"
                 android:maxLines="2"
