--- a/app/src/main/res/layout/item_address.xml
+++ b/app/src/main/res/layout/item_address.xml
@@ -16,24 +16,22 @@
     <TextView
         android:id="@+id/tv_setting_type"
         style="@style/item_text_style"
-        android:ellipsize="middle"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/tv_alias"
         android:layout_marginLeft="@dimen/d12"
         android:layout_marginRight="@dimen/d5"
         android:layout_marginTop="@dimen/d16"
-        android:layout_toLeftOf="@+id/ib_delete"
-       />
+        android:layout_toLeftOf="@+id/btn_delete"
+        android:ellipsize="middle" />
 
-    <ImageButton
-        android:id="@+id/ib_delete"
-        android:layout_width="@dimen/d20"
-        android:layout_height="@dimen/d20"
+    <Button
+        android:id="@+id/btn_delete"
+        android:layout_width="@dimen/d21"
+        android:layout_height="@dimen/d21"
         android:layout_alignBottom="@+id/tv_alias"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="@dimen/d20"
-        android:background="@color/transparent"
-        android:src="@mipmap/icon_delete" />
+        android:background="@mipmap/icon_delete"
+        android:padding="@dimen/d5" />
 
 
 </RelativeLayout>
