--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -122,6 +122,11 @@
         <item name="android:textSize">@dimen/text_size_16</item>
     </style>
 
+    <style name="black_14_text_style">
+        <item name="android:textColor">@color/black_1d2124</item>
+        <item name="android:textSize">@dimen/text_size_14</item>
+    </style>
+
     <style name="black_18_text_style" parent="marquee_style">
         <item name="android:textColor">@color/black_1d2124</item>
         <item name="android:textSize">@dimen/text_size_18</item>
