--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -18,8 +18,9 @@
         android:id="@+id/btnLogout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/d50"
-        android:layout_marginTop="@dimen/d32"
+        android:layout_marginTop="@dimen/d30"
         android:background="@color/white"
-        android:text="@string/logout" />
+        android:text="@string/logout"
+        android:textSize="@dimen/text_size_16" />
 
 </LinearLayout>
