--- a/app/src/main/res/layout/item_setting.xml
+++ b/app/src/main/res/layout/item_setting.xml
@@ -2,38 +2,45 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rl_setting_types"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center_vertical"
-    android:gravity="center_vertical"
-    android:layout_height="@dimen/d48">
+    android:gravity="center_vertical">
+
+    <Button
+        android:id="@+id/btn_icon"
+        android:layout_width="@dimen/d24"
+        android:layout_height="@dimen/d24"
+        android:layout_marginLeft="@dimen/d15"
+        android:layout_marginTop="@dimen/d12"
+        android:background="@mipmap/icon_check_wallet_info" />
 
     <TextView
         android:id="@+id/tv_setting_type"
         style="@style/black_16_text_style"
-        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="@dimen/d16"
         android:layout_marginLeft="@dimen/d20"
         android:layout_marginRight="@dimen/d5"
+        android:layout_marginTop="@dimen/d16"
         android:layout_toLeftOf="@+id/ib_detail"
-        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/btn_icon"
         android:background="@color/transparent"
-        android:drawableLeft="@mipmap/icon_check_wallet_info"
-        android:drawablePadding="@dimen/d16"
-        android:gravity="center_vertical"
-        android:textColor="@color/black22" />
+        android:gravity="center_vertical" />
 
     <ImageButton
         android:id="@+id/ib_detail"
         android:layout_width="@dimen/d16"
-        android:layout_centerVertical="true"
         android:layout_height="@dimen/d16"
         android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         android:layout_marginRight="@dimen/d12"
         android:background="@color/transparent"
         android:src="@mipmap/icon_detail" />
 
     <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/d1"
+        style="@style/line_style"
         android:layout_alignParentBottom="true"
-        android:background="@color/black10_1d2124" />
+        android:layout_alignStart="@+id/tv_setting_type"
+        android:layout_toRightOf="@+id/btn_icon" />
 
 </RelativeLayout>
