--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -19,32 +19,35 @@
             android:layout_marginTop="@dimen/d20"
             android:background="@color/theme_grey">
 
-            <RelativeLayout
-                android:id="@+id/rl_amount_info"
+            <LinearLayout
+                android:id="@+id/ll_amount_info"
                 style="@style/bg_gradual_change_style"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/tv_address_key"
                     style="@style/blue_16_text_style"
+                    android:layout_width="@dimen/d0"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
+                    android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:text="@string/my_account" />
 
                 <RelativeLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="@dimen/d0"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/d20"
                     android:layout_marginLeft="@dimen/d32"
                     android:layout_marginTop="@dimen/d20"
                     android:layout_toRightOf="@+id/tv_address_key"
+                    android:layout_weight="2.3"
                     android:gravity="right|center_vertical">
 
                     <TextView
                         android:id="@+id/tv_account_address_value"
-                        style="@style/black_14_single_text_style"
+                        style="@style/black_14_text_style"
                         android:layout_alignParentRight="true"
                         android:ellipsize="middle"
                         android:gravity="center|right" />
@@ -61,7 +64,7 @@
                             android:layout_width="@dimen/d0"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="@dimen/d10"
-                            android:layout_weight="1.1"
+                            android:layout_weight="1.2"
                             android:gravity="left|center_vertical"
                             android:orientation="vertical">
 
@@ -105,7 +108,6 @@
                             android:layout_width="@dimen/d1"
                             android:layout_height="match_parent"
                             android:layout_gravity="center_vertical"
-                            android:layout_margin="@dimen/d5"
                             android:background="@color/black20_1d2124" />
 
                         <RelativeLayout
@@ -145,13 +147,13 @@
                     </LinearLayout>
                 </RelativeLayout>
 
-            </RelativeLayout>
+            </LinearLayout>
 
             <RelativeLayout
                 android:id="@+id/rl_transaction_info"
                 style="@style/bg_white_style"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/rl_amount_info"
+                android:layout_below="@+id/ll_amount_info"
                 android:layout_marginTop="@dimen/d30">
 
                 <TextView
@@ -186,11 +188,13 @@
 
                 <EditText
                     android:id="@+id/et_input_destination_address"
-                    style="@style/black_14_single_edit_text_style"
+                    style="@style/black_14_edit_text_style"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:maxHeight="@dimen/d44"
+                    android:lineHeight="@dimen/d22"
+                    android:maxLines="2"
                     android:layout_below="@+id/tv_account_address_key"
-                    android:ellipsize="middle"
                     android:hint="@string/please_input_address" />
 
                 <View
