--- a/app/src/main/res/layout/activity_send_toconfirm_pwd.xml
+++ b/app/src/main/res/layout/activity_send_toconfirm_pwd.xml
@@ -1,84 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ll_send_confirm"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/theme_grey"
     android:orientation="vertical">
 
-    <include layout="@layout/include_header" />
-
-
     <LinearLayout
-        style="@style/bg_white_style"
-        android:layout_height="wrap_content"
+        android:id="@+id/ll_send_confirm"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvTransactionDetailKey"
-            style="@style/black70_16_single_text_style"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/d20"
-            android:ellipsize="middle"
-            android:text="@string/transaction_to" />
-
-        <TextView
-            android:id="@+id/tvTransactionDetail"
-            style="@style/orange_30_text_style"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/d30"
-            tools:text="28928.0000000 BCC" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/d0.5"
-            android:layout_marginTop="@dimen/d24"
-            android:background="@color/black20_1d2124" />
+        <include layout="@layout/include_header" />
 
 
-        <TextView
-            android:id="@+id/tvReceiveAccountKey"
-            style="@style/black_16_text_style"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="@dimen/d18"
-            android:text="@string/receive_account_address" />
-
-        <TextView
-            android:id="@+id/tv_destination_wallet"
-            style="@style/black30_16_text_style"
-            android:layout_marginTop="@dimen/d22"
-            android:maxLines="2" />
-
-        <View
-            style="@style/line_style"
-            android:layout_marginTop="@dimen/d18" />
-
-        <TextView
-            style="@style/black_16_text_style"
-            android:layout_marginTop="@dimen/d18"
-            android:text="@string/password" />
-
-        <include
-            layout="@layout/include_edit_text_password"
-            android:layout_width="match_parent"
+        <LinearLayout
+            style="@style/bg_white_style"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/d20"
-            android:layout_marginTop="@dimen/d22" />
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/tvTransactionDetailKey"
+                style="@style/black70_16_single_text_style"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/d20"
+                android:ellipsize="middle"
+                android:text="@string/transaction_to" />
+
+            <TextView
+                android:id="@+id/tvTransactionDetail"
+                style="@style/orange_30_text_style"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/d30"
+                tools:text="28928.0000000 BCC" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/d0.5"
+                android:layout_marginTop="@dimen/d24"
+                android:background="@color/black20_1d2124" />
+
+
+            <TextView
+                android:id="@+id/tvReceiveAccountKey"
+                style="@style/black_16_text_style"
+                android:layout_gravity="center_vertical"
+                android:layout_marginTop="@dimen/d18"
+                android:text="@string/receive_account_address" />
+
+            <TextView
+                android:id="@+id/tv_destination_wallet"
+                style="@style/black30_16_text_style"
+                android:layout_marginTop="@dimen/d22"
+                android:maxLines="2" />
+
+            <View
+                style="@style/line_style"
+                android:layout_marginTop="@dimen/d18" />
+
+            <TextView
+                style="@style/black_16_text_style"
+                android:layout_marginTop="@dimen/d18"
+                android:text="@string/password" />
+
+            <include
+                layout="@layout/include_edit_text_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/d20"
+                android:layout_marginTop="@dimen/d16" />
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_send"
+            style="@style/button_style"
+            android:layout_marginLeft="@dimen/d12"
+            android:layout_marginRight="@dimen/d12"
+            android:layout_marginTop="@dimen/d30"
+            android:text="@string/confirm" />
+
+        <View
+            android:id="@+id/v_space"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/d16"
+            android:background="@color/transparent" />
     </LinearLayout>
-
-    <Button
-        android:id="@+id/btn_send"
-        style="@style/button_style"
-        android:layout_marginLeft="@dimen/d12"
-        android:layout_marginRight="@dimen/d12"
-        android:layout_marginTop="@dimen/d30"
-        android:text="@string/confirm" />
-
-    <View
-        android:id="@+id/v_space"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/d16"
-        android:background="@color/transparent" />
-</LinearLayout>
+</ScrollView>
