--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -89,6 +89,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_marginLeft">@dimen/d10</item>
         <item name="android:layout_marginRight">@dimen/d10</item>
+        <item name="android:textAllCaps">false</item>
         <item name="android:textSize">@dimen/text_size_20</item>
         <item name="android:textColor">@color/white</item>
     </style>
@@ -98,6 +99,7 @@
         <item name="android:layout_height">@dimen/d48</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:textSize">@dimen/text_size_20</item>
+        <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@drawable/bg_btn_d_select_color</item>
     </style>
 
