--- a/app/src/main/res/layout/include_edit_text_password.xml
+++ b/app/src/main/res/layout/include_edit_text_password.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:singleLine="true"
             android:background="@color/transparent"
             android:digits="@string/password_rule"
             android:drawablePadding="@dimen/d10"
