--- a/app/src/main/res/layout/item_language_switch.xml
+++ b/app/src/main/res/layout/item_language_switch.xml
@@ -11,7 +11,10 @@
         style="@style/black_14_text_style"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
+        android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/d22"
+        android:layout_marginTop="@dimen/d10"
+        android:layout_marginBottom="@dimen/d10"
         android:layout_marginRight="@dimen/d34"
         android:layout_toLeftOf="@+id/ib_detail"
         android:background="@color/transparent"
