--- a/app/src/main/res/layout/activity_check_wallet_info.xml
+++ b/app/src/main/res/layout/activity_check_wallet_info.xml
@@ -1,157 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/theme_grey"
     android:orientation="vertical">
 
-    <include layout="@layout/include_header" />
-
-    <RelativeLayout
-        style="@style/bg_white_style"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_address_key"
-            style="@style/black_16_text_style"
-            android:layout_marginTop="@dimen/d20"
-            android:text="@string/my_account_address" />
+        <include layout="@layout/include_header" />
 
-        <Button
-            android:id="@+id/btn_copy"
-            android:layout_width="@dimen/d18"
-            android:layout_height="@dimen/d18"
-            android:layout_alignBottom="@+id/tv_address_key"
-            android:layout_alignParentRight="true"
-            android:layout_marginLeft="@dimen/d10"
-            android:background="@mipmap/icon_copy"
-            android:padding="@dimen/d4" />
-
-        <TextView
-            android:id="@+id/tv_account_address_value"
-            style="@style/black70_14_single_text_style"
-            android:layout_marginLeft="@dimen/d18"
-            android:layout_marginTop="@dimen/d20"
-            android:layout_toLeftOf="@+id/btn_copy"
-            android:layout_toRightOf="@+id/tv_address_key"
-            android:gravity="center_vertical|right"
-            android:textColor="@color/black70_1d2124" />
-
-        <TextView
-            android:id="@+id/tv_balance_key"
-            style="@style/black_16_text_style"
-            android:layout_below="@+id/tv_address_key"
-            android:layout_marginBottom="@dimen/d20"
-            android:layout_marginTop="@dimen/d20"
-            android:text="@string/account_balance" />
-
-        <TextView
-            android:id="@+id/tv_balance"
-            style="@style/black_16_text_style"
+        <RelativeLayout
+            style="@style/bg_white_style"
             android:layout_width="match_parent"
-            android:layout_below="@+id/tv_address_key"
-            android:layout_marginBottom="@dimen/d20"
-            android:layout_marginLeft="@dimen/d16"
-            android:layout_marginTop="@dimen/d20"
-            android:layout_toLeftOf="@+id/ll_currency"
-            android:layout_toRightOf="@+id/tv_balance_key"
-            android:gravity="center|right"
-            android:textColor="@color/orange_yellow"
-            tools:text="0" />
-
-        <ProgressBar
-            android:id="@+id/pb_balance"
-            android:layout_width="@dimen/d20"
-            android:layout_height="@dimen/d20"
-            android:layout_below="@+id/tv_address_key"
-            android:layout_marginBottom="@dimen/d20"
-            android:layout_marginRight="@dimen/d5"
-            android:layout_marginTop="@dimen/d20"
-            android:layout_toLeftOf="@+id/ll_currency"
-            android:layout_toRightOf="@+id/tv_balance_key"
-            android:gravity="center|right"
-            android:indeterminateTint="@color/orange_yellow"
-            android:visibility="gone" />
-
-        <LinearLayout
-            android:id="@+id/ll_currency"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/tv_address_key"
-            android:layout_marginLeft="@dimen/d20"
-            android:layout_marginTop="@dimen/d23"
-            android:gravity="right|bottom"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/tv_currency"
+                android:id="@+id/tv_address_key"
                 style="@style/black_16_text_style"
+                android:layout_marginTop="@dimen/d20"
+                android:text="@string/my_account_address" />
+
+            <Button
+                android:id="@+id/btn_copy"
+                android:layout_width="@dimen/d18"
+                android:layout_height="@dimen/d18"
+                android:layout_alignBottom="@+id/tv_address_key"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="@dimen/d10"
+                android:background="@mipmap/icon_copy"
+                android:padding="@dimen/d4" />
+
+            <TextView
+                android:id="@+id/tv_account_address_value"
+                style="@style/black70_14_single_text_style"
+                android:layout_marginLeft="@dimen/d18"
+                android:layout_marginTop="@dimen/d20"
+                android:layout_toLeftOf="@+id/btn_copy"
+                android:layout_toRightOf="@+id/tv_address_key"
+                android:gravity="center_vertical|right"
+                android:textColor="@color/black70_1d2124" />
+
+            <TextView
+                android:id="@+id/tv_balance_key"
+                style="@style/black_16_text_style"
+                android:layout_below="@+id/tv_address_key"
+                android:layout_marginBottom="@dimen/d20"
+                android:layout_marginTop="@dimen/d20"
+                android:text="@string/account_balance" />
+
+            <TextView
+                android:id="@+id/tv_balance"
+                style="@style/black_16_text_style"
+                android:layout_width="match_parent"
+                android:layout_below="@+id/tv_address_key"
+                android:layout_marginBottom="@dimen/d20"
+                android:layout_marginLeft="@dimen/d16"
+                android:layout_marginTop="@dimen/d20"
+                android:layout_toLeftOf="@+id/ll_currency"
+                android:layout_toRightOf="@+id/tv_balance_key"
+                android:gravity="center|right"
+                android:textColor="@color/orange_yellow"
+                tools:text="0" />
+
+            <ProgressBar
+                android:id="@+id/pb_balance"
+                android:layout_width="@dimen/d20"
+                android:layout_height="@dimen/d20"
+                android:layout_below="@+id/tv_address_key"
+                android:layout_marginBottom="@dimen/d20"
+                android:layout_marginRight="@dimen/d5"
+                android:layout_marginTop="@dimen/d20"
+                android:layout_toLeftOf="@+id/ll_currency"
+                android:layout_toRightOf="@+id/tv_balance_key"
+                android:gravity="center|right"
+                android:indeterminateTint="@color/orange_yellow"
+                android:visibility="gone" />
+
+            <LinearLayout
+                android:id="@+id/ll_currency"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:drawablePadding="@dimen/d5"
-                android:drawableRight="@mipmap/icon_dropdown"
-                android:gravity="bottom"
-                android:textSize="@dimen/text_size_12" />
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/tv_address_key"
+                android:layout_marginLeft="@dimen/d20"
+                android:layout_marginTop="@dimen/d23"
+                android:gravity="right|bottom"
+                android:orientation="horizontal">
 
+                <TextView
+                    android:id="@+id/tv_currency"
+                    style="@style/black_16_text_style"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:drawablePadding="@dimen/d5"
+                    android:drawableRight="@mipmap/icon_dropdown"
+                    android:gravity="bottom"
+                    android:textSize="@dimen/text_size_12" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <LinearLayout
+            style="@style/bg_white_style"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                style="@style/black_16_text_style"
+                android:layout_marginTop="@dimen/d20"
+                android:text="@string/private_key" />
+
+            <TextView
+                style="@style/black30_14_text_style"
+                android:layout_marginTop="@dimen/d16"
+                android:lineSpacingExtra="@dimen/d3"
+                android:text="@string/save_private_key_hint" />
+
+            <include
+                layout="@layout/include_edit_text_private_key"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/d20"
+                android:layout_marginTop="@dimen/d16" />
         </LinearLayout>
 
-    </RelativeLayout>
-
-    <LinearLayout
-        style="@style/bg_white_style"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            style="@style/black_16_text_style"
-            android:layout_marginTop="@dimen/d20"
-            android:text="@string/private_key" />
-
-        <TextView
-            style="@style/black30_14_text_style"
-            android:layout_marginTop="@dimen/d16"
-            android:lineSpacingExtra="@dimen/d3"
-            android:text="@string/save_private_key_hint" />
-
-        <include
-            layout="@layout/include_edit_text_private_key"
+        <LinearLayout
+            style="@style/bg_white_style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/d20"
-            android:layout_marginTop="@dimen/d16" />
+            android:orientation="vertical">
+
+
+            <TextView
+                style="@style/black_16_text_style"
+                android:layout_marginTop="@dimen/d20"
+                android:text="@string/send_wallet_file_by_email" />
+
+            <TextView
+                style="@style/black30_14_text_style"
+                android:layout_marginTop="@dimen/d16"
+                android:lineSpacingExtra="@dimen/d3"
+                android:text="@string/email_json_rule" />
+
+            <Button
+                android:id="@+id/btnSendEmail"
+                style="@style/button_style"
+                android:layout_marginBottom="@dimen/d20"
+                android:layout_marginLeft="@dimen/d3"
+                android:layout_marginRight="@dimen/d3"
+                android:layout_marginTop="@dimen/d16"
+                android:text="@string/send_email" />
+        </LinearLayout>
+
     </LinearLayout>
-
-    <LinearLayout
-        style="@style/bg_white_style"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-
-        <TextView
-            style="@style/black_16_text_style"
-            android:layout_marginTop="@dimen/d20"
-            android:text="@string/send_wallet_file_by_email" />
-
-        <TextView
-            style="@style/black30_14_text_style"
-            android:layout_marginTop="@dimen/d16"
-            android:lineSpacingExtra="@dimen/d3"
-            android:text="@string/email_json_rule" />
-
-        <Button
-            android:id="@+id/btnSendEmail"
-            style="@style/button_style"
-            android:layout_marginBottom="@dimen/d20"
-            android:layout_marginLeft="@dimen/d3"
-            android:layout_marginRight="@dimen/d3"
-            android:layout_marginTop="@dimen/d16"
-            android:text="@string/send_email" />
-    </LinearLayout>
-
-</LinearLayout>
+</ScrollView>
