--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,7 +48,7 @@
             android:drawableLeft="@mipmap/icon_create_wallet"
             android:drawablePadding="@dimen/d12"
             android:padding="@dimen/d5"
-            android:text="@string/create_new_wallet" />
+            android:text="@string/create_wallet" />
 
         <TextView
             android:id="@+id/tv_import_wallet"
